finished CFGGenerator and turned IR into 2-address code